--- a/index.html
+++ b/index.html
@@ -2,37 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Farshid roohi | Deveoper Application</title>
+    <title>Farshid roohi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link href="css/style.css" rel="stylesheet" >
+    <link href="css/Qmedia.css" rel="stylesheet" />
     <style>
-        .Profile {
-
-            position: fixed;
-            top: 29px;
-            right: 29px;
-            width: 250px;
-            height: 250px;
-            border-radius: 100%;
-            -webkit-border-radius: 100%;
-            -moz-border-radius: 100%;
-            box-shadow: 0 0 12px 3px #828282;
-            -moz-box-shadow: 0 0 12px 3px #828282;
-            -webkit-box-shadow: 0 0 12px 3px #828282;
-
-
-        }
-        .Profile img{
-            width: 250px;
-            height: 250px;
-            border-radius: 100%;
-            -webkit-border-radius: 100%;
-            -moz-border-radius: 100%;
-            background: transparent url('img/my_image.JPG') no-repeat center top;
-        }
+        
 
     </style>
 </head>
@@ -40,14 +18,17 @@
 <body>
 
 
+    <div class="Profile">
+        <a href="http://farshid-roohi.ir/"> <img src="img/my_image.JPG" alt="Farshid roohi profile"></a>
 
+    </div>
 <!--==== Start Code ====-->
 <div class="code">
 
     <div class="line-count">
 
     </div>
-
+   
     <!--==== Start Code Items ====-->
     <div class="code-items">
 
@@ -598,10 +579,7 @@ Android programming experience nearly three years</br>
     </div>
     <!--==== Finish Code Items ====-->
 
-    <div class="Profile">
-        <a href="http://farshid-roohi.ir/"> <img src="img/my_image.JPG" alt="Farshid roohi profile"></a>
-
-    </div>
+   
 </div>
 <!--==== Finish Code ====-->
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
